#45396: fix duration time list position on IE

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -704,7 +704,7 @@ input[type=search]::-ms-clear {
 	max-height: 300px;
 	overflow-y: auto;
 	width: 100%;
-	left: initial;
+	left: auto;
 	right: 0;
 }
 
